# MMORPG

./: README.md
mmorpg-server/server/server-publish/server/: CMakeLists.txt  Common.mak  Makefile  clear_temps.bat  tuteng_lianyun.sln  tuteng_lianyun_2017.sln
mmorpg-server/server/server-publish/server/doc/: 数据统计文档.docx  服务器介绍.pptx  道具日志规范.xls
mmorpg-server/server/server-publish/server/include/: AbnormalTransHelper.h  ActivityUtil.h  AsyncMsgCallback.h  AsyncMsgCallbackMgr.h  AvalonDailyTimer.h  CL2V2ScoreWarDataEntry.h  CL2V2ScoreWarDefine.h  CL2V2ScoreWarProtocol.h  CLAbnormalTransDefine.h  CLAccountCounterDataEntry.h  CLAccountShopItemDataEntry.h  CLActionProtocol.h  CLActiveEventDataEntry.h  CLActivityAttributeDefine.h  CLActivityDefine.h  CLActivityInfo.h  CLActivityMonsterDataEntry.h  CLActivityMonsterProbDataEntry.h  CLActivityProtocol.h  CLActivitySuitAdditionDataEntry.h  CLAdventWeeklyTaskAddRewardDataEntry.h  CLAdventurePassDataEntry.h  CLAdventureTeamDataEntry.h  CLAdventureTeamDefine.h  CLAdventureTeamGradeDataEntry.h  CLAdventureTeamProtocol.h  CLAnnouncementDataEntry.h  CLAnnouncementDefine.h  CLAntiAddictDefine.h  CLAntiAddictHolidayDataEntry.h  CLAntiAddictMgr.h  CLAntiAddictTimeDataEntry.h  CLApplication.h  CLArtifactJarLotteryDataEntry.h  CLAuctionBoothDataEntry.h  CLAuctionDefine.h  CLAuctionMagicExpectUpDataEntry.h  CLAuctionMagicStrengAdditDataEntry.h  CLAuctionNoTreasAverPriceMinNumDataEntry.h  CLAuctionPageStruct.h  (+375 more)
mmorpg-server/server/server-publish/server/include/json/: reader.inl
mmorpg-server/server/server-publish/server/src/AdminServer/: ASApplication.cpp  ASApplication.h  ASBillingHandler.cpp  ASBillingHandler.h  ASBillingNetwork.cpp  ASBillingNetwork.h  ASConsoleHandler.cpp  ASConsoleHandler.h  ASConsoleNetwork.cpp  ASConsoleNetwork.h  ASExternalNetwork.cpp  ASExternalNetwork.h  ASInternalNetwork.cpp  ASInternalNetwork.h  ASLoggerHandler.cpp  ASLoggerHandler.h  ASLoginHandler.cpp  ASLoginHandler.h  ASRegisterProtocols.cpp  ASRouter.cpp  ASRouter.h  ASSysHandler.cpp  ASSysHandler.h  CMakeLists.txt  DBLogQueryThread.cpp  DBLogQueryThread.h  DBLogThread.cpp  DBLogThread.h  DBLoggerMgr.cpp  DBLoggerMgr.h  GateSession.cpp  GateSession.h  GateSessionMgr.cpp  GateSessionMgr.h  Makefile  main.cpp
mmorpg-server/server/server-publish/server/src/BattleScene/: AIScript.cpp  AIScript.h  AbnormalTransactionMgr.cpp  AbnormalTransactionMgr.h  AbnormalTransactionRecord.cpp  AbnormalTransactionRecord.h  ActionCounterMgr.cpp  ActiveTask.cpp  ActiveTask.h  ActivityAttribute.h  ActivityAttributeMgr.cpp  ActivityAttributeMgr.h  ActivityMgr.cpp  ActivityMgr.h  ActivityScript.h  BaseTask.cpp  BaseTask.h  BaseTaskMgr.cpp  BaseTaskMgr.h  BattleScene.cpp  BattleScene.h  BattleScene.vcxproj  BattleScene.vcxproj.filters  BattleScene_2017.vcxproj  BattleScene_2017.vcxproj.filters  BuffMgr.cpp  BuffMgr.h  CMakeLists.txt  CityMonster.cpp  CityMonster.h  CommonQuickBuyTransaction.cpp  CommonQuickBuyTransaction.h  CounterMgr.cpp  CounterMgr.h  Creature.cpp  Creature.h  Dungeon.cpp  Dungeon.h  DungeonEntryScene.cpp  DungeonEntryScene.h  (+183 more)
mmorpg-server/server/server-publish/server/src/BattleServer/: BSApplication.cpp  BSApplication.h  BSBaseBattle.cpp  BSBaseBattle.h  BSBaseBattleMgr.cpp  BSBaseBattleMgr.h  BSBaseRace.cpp  BSBaseRace.h  BSBattle.cpp  BSBattle.h  BSBattleMgr.cpp  BSBattleMgr.h  BSBattleSwitchMgr.cpp  BSBattleSwitchMgr.h  BSDungeonHandler.cpp  BSDungeonHandler.h  BSItemHandler.cpp  BSItemHandler.h  BSLostBattle.cpp  BSLostBattle.h  BSLostBattleMgr.cpp  BSLostBattleMgr.h  BSLostDungeonHandler.cpp  BSLostDungeonHandler.h  BSLostMonsterRace.cpp  BSLostMonsterRace.h  BSLostPKRace.cpp  BSLostPKRace.h  BSLostTeamDungeonRace.cpp  BSLostTeamDungeonRace.h  BSNetwork.cpp  BSNetwork.h  BSPlayer.cpp  BSPlayer.h  BSPlayerMgr.cpp  BSPlayerMgr.h  BSRace.cpp  BSRace.h  BSRaceMgr.cpp  BSRaceMgr.h  (+31 more)
mmorpg-server/server/server-publish/server/src/CenterServer/: CMakeLists.txt  CSApplication.cpp  CSApplication.h  CSNetwork.cpp  CSNetwork.h  CSRegisterProtocols.cpp  CenterHandler.cpp  CenterHandler.h  CenterSysHandler.cpp  CenterSysHandler.h  ChatMonitorHandler.cpp  ChatMonitorHandler.h  GMClient.cpp  GMClient.h  GMClientMgr.cpp  GMClientMgr.h  GMNetwork.cpp  GMNetwork.h  GameParamMgr.cpp  GameZone.cpp  GameZone.h  GameZoneMgr.cpp  GameZoneMgr.h  HttpRequest.h  HttpResponse.h  Makefile  PunishmentMgr.cpp  PunishmentMgr.h  main.cpp
mmorpg-server/server/server-publish/server/src/ChallengeServer/: CSApplication.cpp  CSApplication.h  CSChallengeHandler.cpp  CSChallengeHandler.h  CSNetwork.cpp  CSRegisterProtocols.cpp  CSSceneHandler.cpp  CSSceneHandler.h  ChallengeMgr.cpp  ChallengeMgr.h  ChallengeScene.cpp  ChallengeScene.h  ChallengeServer_2017.vcxproj  ChallengeServer_2017.vcxproj.filters  GameParamMgr.cpp  GameParamMgr.h  GameZone.cpp  GameZone.h  GameZoneMgr.cpp  Makefile  ScriptMgr.cpp  ScriptMgr.h  WorldChallengeScript.cpp  WorldChallengeScript.h  main.cpp
mmorpg-server/server/server-publish/server/src/CommonLib/: AbnormalTransHelper.cpp  ActivityUtil.cpp  AsyncMsgCallback.cpp  AsyncMsgCallbackMgr.cpp  CL2V2ScoreWarDataEntry.cpp  CLAccountCounterDataEntry.cpp  CLAccountShopItemDataEntry.cpp  CLActiveEventDataEntry.cpp  CLActivityMonsterDataEntry.cpp  CLActivityMonsterProbDataEntry.cpp  CLActivitySuitAdditionDataEntry.cpp  CLAdventWeeklyTaskAddRewardDataEntry.cpp  CLAdventurePassDataEntry.cpp  CLAdventureTeamDataEntry.cpp  CLAdventureTeamGradeDataEntry.cpp  CLAnnouncementDataEntry.cpp  CLAntiAddictHolidayDataEntry.cpp  CLAntiAddictMgr.cpp  CLAntiAddictTimeDataEntry.cpp  CLApplication.cpp  CLArtifactJarLotteryDataEntry.cpp  CLAuctionBoothDataEntry.cpp  CLAuctionMagicExpectUpDataEntry.cpp  CLAuctionMagicStrengAdditDataEntry.cpp  CLAuctionNoTreasAverPriceMinNumDataEntry.cpp  CLAuctionPageStruct.cpp  CLAuctionRecoveItemDataEntry.cpp  CLAuctionSysValueDataEntry.cpp  CLBeadConvertCostDataEntry.cpp  CLBeadConvertDropDataEntry.cpp  CLBetHorseDataEntry.cpp  CLBlackMarketItemDataEntry.cpp  CLBuffDataEntry.cpp  CLBuffRandomDataEntry.cpp  CLChampionDataEntry.cpp  CLChargeMallDataEntry.cpp  (+219 more)
(+5639 files in other folders)
