project(aldzn)
cmake_minimum_required(VERSION 3.16)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/CommonLib)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/AdminServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/RecordServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/GateServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/WorldServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/SceneServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/CrossServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/MatchServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/RelayServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/UdpConnServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/CenterServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/ReplayServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/VerifyCenterServer)
#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/VerifyServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/GlobalActivityServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/BattleServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/BattleScene)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/TeamCopyServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/DungeonServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/UnionServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/ObserveServer)


